compiler/testData/diagnostics/tests/multiplatform/hmpp/commonPlatformRedeclaration.kt
// FIR_IDENTICAL
// MODULE: common
// TARGET_PLATFORM: Common

class <!PACKAGE_OR_CLASSIFIER_REDECLARATION!>Foo<!>

// MODULE: intermediate()()(common)
// TARGET_PLATFORM: Common


// MODULE: main()()(common, intermediate)

class Foo
